[gd_scene load_steps=14 format=2]

[ext_resource path="res://MMScreen/Panel.gd" type="Script" id=1]
[ext_resource path="res://MMScreen/CallButton.gd" type="Script" id=2]
[ext_resource path="res://MMScreen/CallTimer.gd" type="Script" id=3]
[ext_resource path="res://MMScreen/Phone.gd" type="Script" id=4]
[ext_resource path="res://music/call.ogg" type="AudioStream" id=5]
[ext_resource path="res://images/icon.png" type="Texture" id=6]
[ext_resource path="res://MMScreen/ContactList.gd" type="Script" id=7]
[ext_resource path="res://fonts/Inter-V.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/person.png" type="Texture" id=9]
[ext_resource path="res://images/phone.png" type="Texture" id=10]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_top = 40.0
content_margin_bottom = 40.0

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 8 )

[node name="Phone" type="PanelContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1139.0
margin_bottom = 740.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1082.0
margin_bottom = 683.0

[node name="Contacts" type="ScrollContainer" parent="HBoxContainer"]
margin_right = 306.0
margin_bottom = 676.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContactList" type="VBoxContainer" parent="HBoxContainer/Contacts"]
margin_right = 294.0
margin_bottom = 958.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="Contact1" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_right = 294.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Mum"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact2" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 74.0
margin_right = 294.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Dad"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact3" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 148.0
margin_right = 294.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Boss"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact4" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 222.0
margin_right = 294.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Plumber"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact5" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 296.0
margin_right = 294.0
margin_bottom = 366.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Pizza"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact6" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 370.0
margin_right = 294.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "George Washington"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact7" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 444.0
margin_right = 294.0
margin_bottom = 514.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Mike Wazowsky"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact8" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 518.0
margin_right = 294.0
margin_bottom = 588.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Kate from Management"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact9" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 592.0
margin_right = 294.0
margin_bottom = 662.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Car Mechanic"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact10" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 666.0
margin_right = 294.0
margin_bottom = 736.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "XYZ"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact11" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 740.0
margin_right = 294.0
margin_bottom = 810.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "No more ideas"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact12" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 814.0
margin_right = 294.0
margin_bottom = 884.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Mcdonalds?"
icon = ExtResource( 9 )
expand_icon = true

[node name="Contact13" type="Button" parent="HBoxContainer/Contacts/ContactList"]
margin_top = 888.0
margin_right = 294.0
margin_bottom = 958.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
text = "Monica"
icon = ExtResource( 9 )
expand_icon = true

[node name="Panel" type="PanelContainer" parent="HBoxContainer"]
margin_left = 310.0
margin_right = 1075.0
margin_bottom = 676.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
margin_left = 40.0
margin_top = 40.0
margin_right = 725.0
margin_bottom = 636.0

[node name="Picture" type="TextureRect" parent="HBoxContainer/Panel/VBoxContainer"]
margin_right = 685.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 9 )
stretch_mode = 6

[node name="Name" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 268.0
margin_right = 685.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Contact name"
align = 1
valign = 1

[node name="Number" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 348.0
margin_right = 685.0
margin_bottom = 386.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Contact number"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 390.0
margin_right = 685.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 340.0
margin_bottom = 206.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Call" type="Button" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 310.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
text = "Call"
icon = ExtResource( 10 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer"]
wait_time = 0.5
script = ExtResource( 3 )

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 344.0
margin_right = 685.0
margin_bottom = 206.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Message" type="Button" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_left = 30.0
margin_top = 30.0
margin_right = 311.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Send predefined message"
icon = ExtResource( 6 )

[node name="CallAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
[connection signal="contact_changed" from="HBoxContainer/Contacts/ContactList" to="HBoxContainer/Panel" method="_on_ContactList_contact_changed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact1" to="HBoxContainer/Contacts/ContactList" method="_on_Contact1_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact2" to="HBoxContainer/Contacts/ContactList" method="_on_Contact2_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact3" to="HBoxContainer/Contacts/ContactList" method="_on_Contact3_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact4" to="HBoxContainer/Contacts/ContactList" method="_on_Contact4_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact5" to="HBoxContainer/Contacts/ContactList" method="_on_Contact5_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact6" to="HBoxContainer/Contacts/ContactList" method="_on_Contact6_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact7" to="HBoxContainer/Contacts/ContactList" method="_on_Contact7_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact8" to="HBoxContainer/Contacts/ContactList" method="_on_Contact8_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact9" to="HBoxContainer/Contacts/ContactList" method="_on_Contact9_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact10" to="HBoxContainer/Contacts/ContactList" method="_on_Contact10_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact11" to="HBoxContainer/Contacts/ContactList" method="_on_Contact11_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact12" to="HBoxContainer/Contacts/ContactList" method="_on_Contact12_pressed"]
[connection signal="pressed" from="HBoxContainer/Contacts/ContactList/Contact13" to="HBoxContainer/Contacts/ContactList" method="_on_Contact13_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Call" to="HBoxContainer/Panel" method="_on_Call_pressed"]
[connection signal="toggled" from="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Call" to="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Timer" method="_on_Call_toggled"]
[connection signal="toggled" from="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Call" to="." method="_on_Call_toggled"]
[connection signal="timeout" from="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Timer" to="HBoxContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Call" method="_on_Timer_timeout"]
